24/02/27 - Iniciado. Adicionado primeiras paginas e alguns pseudocódigos.
24/02/28 - Adicionado pagina de marcação e pequenas correções. Pseudocódigos.