@@ -1,13 +1,0 @@
-<!DOCTYPE html>
-<html lang="eng">
-<meta charset="UTF-8">
-<head>
-    <title>VittaClinic</title>
-</head>
-<body>
-    <a href="/vittaclinic2/index.htm"><h1>Vitta.Clinic</h1></a>
-    <p>Usuário: * Tipo: *</p>
-    <p><a href="../vittaclinic2/paginas/comum/entrar.htm">Entrar/Registrar</a></p>
-    <p><a href="../vittaclinic2/paginas/pacientes/marcar-consulta.htm">Marcar Consulta</a></p>
-</body>
-</html>
