@@ -1,0 +1,14 @@
+<?php session_start(); ?>
+<!DOCTYPE html>
+<html lang="eng">
+<meta charset="UTF-8">
+<head>
+    <title>VittaClinic</title>
+</head>
+<body>
+    <a href="/vittaclinic2/index.php"><h1>Vitta.Clinic</h1></a>
+    <p>Usuário: * Tipo: *</p>
+    <p><a href="../vittaclinic2/paginas/comum/entrar.php">Entrar/Registrar</a></p>
+    <p><a href="../vittaclinic2/paginas/pacientes/marcar-consulta.php">Marcar Consulta</a></p>
+</body>
+</html>
