@@ -14,6 +14,7 @@ Sistema de login
     Se email existe em administradores {
         Se senha existe em admnistradores {
             "acesso permitido"
+            $devglobalusuario = "administrador"
         } else {
             "verifique sua senha"
         }
@@ -22,6 +23,7 @@ Sistema de login
         Se email existe em medicos {
             Se senha existe em medicos {
                 "acesso permitido"
+                $devglobalusuario = "medico"
             } else {
                 "verifique sua senha"
             }
@@ -30,6 +32,7 @@ Sistema de login
             Se email existe em pacientes {
                 Se senha existe em pacientes {
                     "acesso permitido"
+                    $devglobalusuario = "paciente"
                 }
             } else {
                 "verifique seu email"
