@@ -1,14 +1,0 @@
-<!DOCTYPE html>
-<html lang="eng">
-<meta charset="UTF-8">
-<head>
-    <title>Entrar</title>
-</head>
-<body>
-    <p><a href="/vittaclinic2/index.htm"><h1>Vitta.Clinic</h1></a></p>
-    <p>Usuário: * Tipo: *</p>
-    <p><h2>Entrar</h2></p>
-    <p>Nessa página o usuario deve poder fazer login.</p>
-    <p><a href="/vittaclinic2/paginas/comum/registro.htm">Registrar</a></p>
-</body>
-</html>
