@@ -5,10 +5,10 @@
     <title>Registro</title>
 </head>
 <body>
-    <p><a href="/vittaclinic2/index.htm"><h1>Vitta.Clinic</h1></a></p>
+    <p><a href="/vittaclinic2/index.php"><h1>Vitta.Clinic</h1></a></p>
     <p>Usuário: * Tipo: *</p>
     <p><h2>Registro</h2></p>
     <p>Nessa página o paciente deve poder se registrar.</p>
-    <p><a href="/vittaclinic2/paginas/comum/entrar.htm">Entrar</a></p>
+    <p><a href="/vittaclinic2/paginas/comum/entrar.php">Entrar</a></p>
 </body>
 </html>
