@@ -5,7 +5,7 @@
     <title>Marque sua consulta</title>
 </head>
 <body>
-    <p><a href="/vittaclinic2/index.htm"><h1>Vitta.Clinic</h1></a></p>
+    <p><a href="/vittaclinic2/index.php"><h1>Vitta.Clinic</h1></a></p>
     <p>Usuário: * Tipo: *</p>
     <p><h1>Marque sua consulta</h1></p>
     <P>Essa pagina só pode ser acessada por pacientes</P>
